<resources>
    <string name="app_name">Filler</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot My Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="title_activity_signup_activity">Signup_activity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="temp">Temp</string>
    <string name="title_activity_new_application_object">new_application_object</string>
    <string name="company_name">Company Name</string>
    <string name="company_description">Company Description</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Job Description</string>
    <string name="contact_information">Contact Information</string>
    <string name="date_last_accessed">Date last Opened</string>
    <string name="tile_image_description">A picture for the user to chose to represent the tile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings_">Settings_Activity</string>
    <string name="profile_information">Profile Information</string>
    <string name="notifications">Notifications</string>
    <string name="order_by">Order By</string>
    <string name="title_activity_profile_">Profile_Activity</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="connect_to_linkedin">Connect to LinkedIn</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_info_veiw_page">InfoVeiwPage</string>
    <string name="title_activity_edit_page">edit_page</string>
    <string name="title_activity_quote_page">QuotePage</string>
</resources>
