<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".new_application_object"
    tools:showIn="@layout/activity_new_application_object">

    <EditText
        android:id="@+id/cmpyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cmpyDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_cmpName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cmpyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/jbTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_cmpyDesc"
        app:layout_constraintTop_toBottomOf="@+id/cmpyName" />

    <EditText
        android:id="@+id/jbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/job_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/jbDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_jbTitle"
        app:layout_constraintTop_toBottomOf="@+id/cmpyDesc" />

    <EditText
        android:id="@+id/jbDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/job_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/contactInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_jbDesc"
        app:layout_constraintTop_toBottomOf="@+id/jbTitle" />

    <EditText
        android:id="@+id/contactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/contact_information"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_contact"
        app:layout_constraintTop_toBottomOf="@+id/jbDesc" />

    <TextView
        android:id="@+id/text_cmpName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_cmpyDesc"
        app:layout_constraintEnd_toStartOf="@+id/cmpyName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_cmpyDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_jbTitle"
        app:layout_constraintEnd_toStartOf="@+id/cmpyDesc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cmpName" />

    <TextView
        android:id="@+id/text_jbTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/job_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_jbDesc"
        app:layout_constraintEnd_toStartOf="@+id/jbTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cmpyDesc" />

    <TextView
        android:id="@+id/text_jbDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/job_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_contact"
        app:layout_constraintEnd_toStartOf="@+id/jbDesc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_jbTitle" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/contact_information"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_jbDesc" />

</android.support.constraint.ConstraintLayout>